add seed services, fix main seed service and stuff